--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,22 @@ img {
   margin-top: 100px;
 }
 
+h2 {
+  color: #b5b1b0;
+  letter-spacing: 3px;
+  font-size: 12px;
+  font-weight: 500;
+}
+
+h3{
+  color: whitesmoke;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 500;
+ 
+}
+
 .article {
   grid-column-gap: 20px;
   opacity: 1;
@@ -234,13 +250,13 @@ img {
   display: grid;
 }
 
-.cct-logo {
+.bright-img {
   opacity: 0.8;
   transition: opacity 0.45s;
   max-width: 100%;
 }
 
-.cct-logo:hover {
+.bright-img:hover {
   opacity: 1;
 }
 
@@ -297,18 +313,182 @@ ul:hover {
   opacity: 1;
 }
 
-/* --- Third section */
+/* --- Third section (Projects) */
 
 .projects {
+  display: grid;
+  grid-template-columns: 0.6fr 1fr;
+  grid-gap: 10px;
+  grid-row-gap: 60px;
+}
+
+.project-container {
+  padding: 20px;
+}
+
+.title-project {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #60e7cc;
+  text-decoration: none;
 }
 
 .img-project {
   max-width: 350px;
+  box-shadow: 10px 10px 20px #0a192f;
+  transition: transform 0.2s ease;
+  filter: saturate(25%) hue-rotate(165deg);
 }
 
-.link-projects {
-  color: #b5b1b0;
+.img-project:hover {
+  transform: scale(1.1);
+  filter: none;
 }
+
+.project-description {
+  padding: 20px;
+  border-radius: 10px;
+  text-align: justify;
+  letter-spacing: 1px;
+  margin-right: 25px;
+  line-height: 180%;
+  color: #b5b1b0;
+  box-shadow: 1px 1px 20px rgba(188, 253, 245, 0.2);
+}
+
+.external-link {
+  color: #60e7cc;
+  text-decoration: none;
+}
+
+.logo-project {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  padding-top: 0px;
+  padding-right: 10px;
+}
+
+.link-project {
+  color: #b5b1b0;
+  text-decoration: none;
+  vertical-align: middle;
+  display: inline-block;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.logo-project:hover,
+.link-project:hover {
+  scale: 1.1;
+  filter: brightness(150%);
+  color: #60e7cc;
+}
+
+/* --- Images slideshow for project 3 */
+
+.project-slideshow {
+  max-width: 1000px;
+  max-height: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+.images-group {
+  display: none;
+}
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: #0a192f;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+  background-color: rgb(96,231,204,0.9);
+}
+
+.text {
+  /* color: #60e7cc; */
+  background-color: rgb(96,231,204,0.9);
+  color: #0a192f;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 8px;
+  width: 80px;
+  text-align: left;
+  
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #60e7cc;
+}
+
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+
+/* ----- Fourth Section (Contact) */
+
+.img-contact{
+  width: 250px;
+}
+
+.form-input{
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  height: 100%;
+  margin: 15px;
+  font-size: 15px;
+}
+
+.msg-box{
+  width: 410px;
+  height: 150px;
+  resize: none;
+  border: none;
+  font-size: 16px;
+  line-height: 1.2;
+  box-sizing: border-box;
+  text-align: left;
+}
+
 /* --- Page lighting */
 .lighting-top {
   position: fixed;
@@ -349,6 +529,16 @@ ul:hover {
   left: -5%;
 }
 
+.lighting-middle{
+  width: 450px;
+  height: 1550px;
+  background-color: #1e3b77;
+  opacity: 0.68;
+  filter: blur(150px);
+  position: absolute;
+  top: 220%;
+  left: 50%;
+}
 /* ----------------------------------------------------------------- */
 
 /* Responsiveness to other screen types */
@@ -673,89 +863,3 @@ ul:hover {
     }
   }
    */
-   @media (max-width: 600px) {
-    .nav-menu {
-    top: 0;
-    right: 0;
-    padding: 20px;
-    }
-    
-    .brand {
-    top: 0;
-    padding: 20px;
-    }
-    
-    .side-menu {
-    top: 10%;
-    padding: 20px;
-    }
-    
-    .grid {
-    flex-direction: column;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    }
-    
-    ._2-col-grid {
-    grid-template-columns: 1fr;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    }
-    
-    .heading {
-    font-size: 48px;
-    }
-    
-    .short-intro {
-    font-size: 22px;
-    }
-    
-    .about-text {
-    max-height: none;
-    font-size: 16px;
-    line-height: 120%;
-    }
-    
-    .sub-header {
-    font-size: 18px;
-    margin-top: 50px;
-    }
-    
-    .article {
-    grid-template-columns: 1fr;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 20px;
-    }
-    
-    .paragraph,
-    ul {
-    font-size: 14px;
-    line-height: 120%;
-    }
-    
-    .img-project {
-    max-width: 100%;
-    }
-    
-    .lighting-top {
-    width: 200px;
-    height: 200px;
-    top: -20%;
-    left: -5%;
-    }
-    
-    .lighting-right {
-    width: 350px;
-    height: 600px;
-    top: 30%;
-    right: -10%;
-    }
-    
-    .lighting-left {
-    width: 300px;
-    height: 300px;
-    top: 120%;
-    left: -5%;
-    }
-    }
