--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-body {
-  background-color: #0a192f;
+body,
+body-thanks {
+  background-color: #243043;
   font-family: Ubuntu, Helvetica, sans-serif;
   scroll-behavior: smooth;
   overflow-x: hidden;
@@ -10,17 +11,17 @@ body {
 .page-content-wrapper {
   z-index: 3;
   position: relative;
+  padding-bottom: 0;
 }
 
 /* RIGHT - Nav Menu */
 .nav-menu {
-  background-color: #0a192f;
+  background-color: #243043;
   float: right;
   position: fixed;
-  border-radius: 8%;
   top: 3px;
   right: 0;
-  padding: 20px 10px;
+  padding: 10px 10px 10px 10px;
   z-index: 1;
 }
 
@@ -77,25 +78,54 @@ body {
 /* --- First Section (Intro and About me) */
 .container {
   max-width: 80%;
+  .side-menu .image-socials {
+    width: 30px;
+    height: 30px;
+    transition: transform 0.4s ease;
+  }
+
+  .side-menu .image-socials:hover {
+    opacity: 0.53;
+    transform: scale(1.5);
+  }
+
+  .side-menu a:not(:last-child) {
+    margin-bottom: 25px;
+  }
+
+  .link-social {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
   margin-left: auto;
   margin-right: auto;
+}
+
+/* Add your existing styles here */
+
+.typewriter {
+  overflow: hidden;
+  border-right: 2px solid white; /* Cursor effect */
+  white-space: nowrap; /* Prevent line breaks */
+  margin: 0 auto;
+  font-size: 36px;
+  color: white;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .grid {
   flex-direction: row;
   justify-content: space-between;
   margin-top: 100px;
-  margin-bottom: 100px;
+  margin-bottom: 30px;
   display: flex;
 }
 
 ._2-col-grid {
   position: relative;
-  grid-template-rows: 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-auto-flow: row;
-  margin-top: 90px;
-  margin-bottom: 100px;
 }
 
 @keyframes fadeIn {
@@ -116,69 +146,89 @@ img {
   display: inline-block;
 }
 
+/* --- First Section (Intro and About me) */
 .content-wrap {
   animation: fadeIn 2s ease-in-out;
-}
-
-.image-wrap {
-  animation: fadeIn 2s ease-in-out;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 100px;
+  margin-bottom: 30px;
 }
 
 .image-wrap {
   position: relative;
   display: inline-block;
   overflow: hidden;
-  border-radius: 45%;
 }
 
 .image-main {
-  position: relative;
-  z-index: 2;
-  transition: opacity 0.1s ease;
+  width: 80%;
+  top: 1%;
+  left: 12%;
 }
 
-.image-back {
-  position: absolute;
-  left: 0;
-  opacity: 0;
-  height: 100%;
-  z-index: 1;
-  transition: opacity 0.1s ease;
-}
-
-.image-wrap:hover .image-back {
-  opacity: 1;
-}
-
-.image-wrap:hover .image-main {
-  opacity: 0;
+.heading-wrap {
+  max-width: 70%;
 }
 
 .heading {
+  text-align: center;
   width: auto;
   max-width: 100%;
   float: none;
   clear: none;
-  color: #b5b1b0;
+  color: #828080;
   object-fit: fill;
-  font-size: 76px;
+  font-size: 70px;
   font-weight: 500;
   line-height: 100%;
   transition: all 0.375s ease-in-out;
 }
 
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: white;
+  }
+}
+
+#typed-text {
+  display: inline-block;
+  border-right: 2px solid white;
+  white-space: nowrap;
+  overflow: hidden;
+  min-height: 1.2em;
+  animation: typing 5s steps(30, end), blink-caret 1s step-end infinite;
+}
+
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: white;
+    border-right: 2px solid white;
+  }
+}
+
 .heading:hover {
   color: #fff;
+  text-shadow: 5px 5px 5px #1e3b77;
 }
 
 .short-intro {
   max-width: 97%;
   color: #b5b1b0;
-  text-align: left;
+  text-align: justify;
   object-fit: fill;
+  padding-top: 30px;
   margin-top: 20px;
-  margin-bottom: 20px;
-  font-size: 26px;
+  font-size: 22px;
   line-height: 175%;
 }
 
@@ -267,6 +317,7 @@ ul li:before {
   align-items: center;
   flex-wrap: wrap;
   gap: 10%;
+  padding-top: 20px;
 }
 
 .icons {
@@ -347,6 +398,16 @@ ul li:before {
   color: #60e7cc;
 }
 
+.more-projects {
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  letter-spacing: 2px;
+  margin-right: 180px;
+  margin-left: 180px;
+  line-height: 50%;
+  color: #b5b1b0;
+}
 /* --- Images slideshow for project 3 */
 
 .project-slideshow {
@@ -436,6 +497,15 @@ ul li:before {
 
 /* ----- Fourth Section (Contact) */
 
+.sub-header-contact {
+  color: #60e7cc;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 500;
+  /* margin-top: 1px; */
+}
+
 h3 {
   color: whitesmoke;
   letter-spacing: 2px;
@@ -505,10 +575,9 @@ form {
 .button:hover {
   background-color: #60e7cc;
   color: #1e3b77;
- 
 }
 
-/* --- Page lighting */
+/* --- Page lighting (bg-grads) */
 
 .lighting-top {
   position: fixed;
@@ -523,16 +592,23 @@ form {
   left: -5%;
 }
 
+.right-top-texture {
+  width: 30%;
+  position: absolute;
+  top: 5%;
+  left: auto;
+  right: -15%;
+}
+
 .lighting-right {
   width: 500px;
-  height: 800px;
-  opacity: 0.28;
-  filter: blur(100px);
+  height: 1500px;
+  opacity: 0.18;
+  filter: blur(180px);
   background-color: #60e7cc;
   border-radius: 100%;
   position: absolute;
   top: 35%;
-  bottom: auto;
   left: auto;
   right: -15%;
 }
@@ -541,7 +617,7 @@ form {
   width: 450px;
   height: 400px;
   opacity: 0.28;
-  filter: blur(100px);
+  filter: blur(150px);
   background-color: #e572f5;
   border-radius: 100%;
   position: absolute;
@@ -560,15 +636,27 @@ form {
   left: 50%;
 }
 
+.lighting-more-projects {
+  width: 450px;
+  height: 50px;
+  background-color: #1e3b77;
+  border-radius: 30%;
+  opacity: 0.68;
+  filter: blur(50px);
+  position: absolute;
+  top: 435%;
+  left: 34%;
+}
+
 .lighting-bottom1 {
-  width: 500px;
+  width: 800px;
   height: 150px;
   background-color: #60e7cc;
-  opacity: 0.68;
-  filter: blur(90px);
+  opacity: 0.5;
+  filter: blur(180px);
   position: absolute;
-  top: 500%;
-  left: 50%;
+  top: 529%;
+  left: 40%;
 }
 
 .lighting-bottom2 {
@@ -576,17 +664,23 @@ form {
   height: 150px;
   border-radius: 50%;
   background-color: #e572f5;
-  opacity: 0.68;
-  filter: blur(90px);
+  opacity: 0.99;
+  filter: blur(150px);
   position: absolute;
-  top: 532%;
-  left: 42%;
+  top: 555%;
+  left: 41%;
 }
 
-/* ----- Thank you page */
+.bottom-texture {
+  width: 32%;
+  position: absolute;
+  left: -1%;
+}
+
+/* ----- Thank you page (message_sent.html) */
 
 .body-thanks {
-  background-color: #0a192f;
+  background-color: #1c2a40;
   font-family: Ubuntu, Helvetica, sans-serif;
   scroll-behavior: smooth;
   overflow-x: hidden;
@@ -594,7 +688,7 @@ form {
 }
 
 #img-thanks {
-  width: 20%;
+  width: 60%;
 }
 
 ._3-col-grid {
@@ -609,6 +703,11 @@ form {
   justify-content: center;
 }
 
+.link-color {
+  color: #60e7cc;
+  font-size: 20px;
+}
+
 .item {
   text-transform: unset;
   color: #60e7cc;
@@ -616,7 +715,9 @@ form {
 }
 
 #footer {
-  margin-top: 15px;
+  position: relative;
+  margin-top: 5px;
+  padding-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -624,6 +725,100 @@ form {
 }
 
 .footer-text {
-  color: #60e7cc;
+  color: #ffffff;
   font-size: 16px;
+  text-shadow: 1px 1px 2px #60e7cc;
+}
+
+/* MEDIA QUERIES */
+
+@media screen and (min-height: 1280px) {
+  .image-main {
+    width: 100%;
+  }
+
+  .lighting-right {
+    width: 500px;
+    height: 1100px;
+    opacity: 0.18;
+    filter: blur(200px);
+    background-color: #60e7cc;
+    border-radius: 30%;
+    position: absolute;
+    top: 20%;
+    left: auto;
+    right: -10%;
+  }
+
+  .lighting-left {
+    width: 450px;
+    height: 400px;
+    opacity: 0.28;
+    filter: blur(180px);
+    background-color: #e572f5;
+    border-radius: 100%;
+    position: absolute;
+    top: 72%;
+    left: 0%;
+  }
+
+  .lighting-middle {
+    width: 450px;
+    height: 1550px;
+    background-color: #1e3b77;
+    opacity: 0.68;
+    filter: blur(150px);
+    position: absolute;
+    top: 125%;
+    left: 50%;
+  }
+
+  .lighting-more-projects {
+    width: 450px;
+    height: 80px;
+    background-color: #1e3b77;
+    border-radius: 30%;
+    opacity: 0.68;
+    filter: blur(50px);
+    position: absolute;
+    top: 264%;
+    left: 41%;
+  }
+
+  .lighting-bottom1 {
+    width: 1000px;
+    height: 150px;
+    background-color: #60e7cc;
+    opacity: 0.5;
+    filter: blur(150px);
+    position: absolute;
+    top: 300%;
+    left: 45%;
+  }
+
+  .lighting-bottom2 {
+    width: 250px;
+    height: 150px;
+    border-radius: 50%;
+    background-color: #e572f5;
+    opacity: 0.99;
+    filter: blur(150px);
+    position: absolute;
+    top: 315%;
+    left: 45%;
+  }
+
+  .right-top-texture {
+    width: 25%;
+    position: absolute;
+    top: 1%;
+    left: auto;
+    right: -10%;
+  }
+
+  .bottom-texture {
+    width: 20%;
+    position: absolute;
+    left: -1%;
+  }
 }
